Update API URL in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,7 +174,8 @@ body {
 </div>
 
 <script>
-const API = window.location.origin;
+const API = "https://mcp-agent-1.onrender.com";
+;
 
 function addMessage(text) {
   const messages = document.getElementById("messages");
