--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,79 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>YouTube MCP Agent</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
 <style>
-/* Global styling */
+/* ---------- GLOBAL STYLES ---------- */
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  background: #000;
+  background: #0f0f0f;
   color: #fff;
   display: flex;
-  height: 100vh;
   overflow: hidden;
+  height: 100vh;
 }
 
 .sidebar {
   width: 240px;
   background: #111;
   border-right: 1px solid #222;
-  overflow-y: auto;
-  padding-top: 12px;
+  padding-top: 15px;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
 .sidebar-item {
-  padding: 12px 22px;
-  font-size: 15px;
+  padding: 14px 24px;
   cursor: pointer;
+  font-size: 15px;
+  border-radius: 6px;
 }
 
 .sidebar-item:hover {
-  background: #1f1f1f;
+  background: #222;
 }
 
 .navbar {
   position: fixed;
   left: 240px;
   right: 0;
-  height: 65px;
+  height: 70px;
   background: #111;
   border-bottom: 1px solid #222;
   display: flex;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 25px;
+  z-index: 10;
 }
 
 .search-box {
-  width: 50%;
-  margin: auto;
+  width: 45%;
   display: flex;
+  gap: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .search-box input {
   width: 100%;
-  padding: 10px;
+  padding: 12px;
+  border-radius: 6px;
   border: 1px solid #333;
   background: #000;
   color: white;
 }
 
 .search-box button {
-  padding: 10px 16px;
+  padding: 12px 24px;
   background: #2563EB;
   border: none;
-  color: white;
+  border-radius: 6px;
   cursor: pointer;
+  color: white;
+  font-weight: 500;
+}
+
+.command-bar {
+  position: fixed;
+  left: 240px;
+  right: 0;
+  top: 70px;
+  background: #111;
+  padding: 14px 25px;
+  border-bottom: 1px solid #222;
+  z-index: 9;
+}
+
+.command-bar input {
+  width: 300px;
+  padding: 10px;
+  border-radius: 6px;
+  background: #000;
+  border: 1px solid #333;
+  color: white;
+}
+
+.command-bar button {
+  padding: 10px 20px;
+  background: #2563EB;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  color: white;
+  font-weight: 500;
 }
 
 .main {
   margin-left: 240px;
-  padding: 20px;
   margin-top: 140px;
+  padding: 25px;
   height: calc(100vh - 140px);
   overflow-y: auto;
 }
@@ -86,15 +125,14 @@ body {
 
 .video-card {
   background: #181818;
+  border-radius: 12px;
   border: 1px solid #333;
-  border-radius: 10px;
   overflow: hidden;
-  transition: 0.2s;
+  transition: .25s;
 }
 
 .video-card:hover {
-  transform: scale(1.03);
-  cursor: pointer;
+  transform: scale(1.02);
 }
 
 .thumb {
@@ -104,12 +142,12 @@ body {
 }
 
 .video-info {
-  padding: 12px;
+  padding: 15px;
 }
 
 .video-info h3 {
-  margin: 0;
-  font-size: 16px;
+  margin: 0 0 5px 0;
+  font-size: 17px;
 }
 
 .video-info small {
@@ -117,16 +155,17 @@ body {
 }
 
 .button-row {
-  padding: 12px;
+  padding: 15px;
   display: flex;
   gap: 8px;
 }
 
 .button-row button {
   flex: 1;
-  padding: 8px;
+  padding: 10px;
   background: #222;
-  border: 1px solid #333;
+  border: 1px solid #444;
+  border-radius: 8px;
   color: white;
   cursor: pointer;
 }
@@ -135,7 +174,6 @@ body {
   background: #333;
 }
 
-/* Toast Notification */
 .toast {
   position: fixed;
   top: 20px;
@@ -147,102 +185,77 @@ body {
   border: 1px solid #444;
   font-size: 14px;
   opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.4s ease;
-  z-index: 9999;
+  transition: opacity 0.4s;
+  z-index: 1000;
 }
 
 .toast.show {
   opacity: 1;
-  pointer-events: auto;
 }
 </style>
-
 </head>
+
 <body>
 
-<!-- Sidebar -->
+<!-- ---------- SIDEBAR ---------- -->
 <div class="sidebar">
   <div class="sidebar-item" onclick="loadHome()">🏠 Home</div>
   <div class="sidebar-item" onclick="loadTrending()">🔥 Trending</div>
   <div class="sidebar-item" onclick="loadSubscriptions()">📺 Subscriptions</div>
-  <div style="border-bottom:1px solid #222; margin:12px 0;"></div>
+  <hr style="border-color:#222" />
   <div class="sidebar-item" onclick="loadHistory()">History</div>
   <div class="sidebar-item" onclick="loadWatchLater()">Watch Later</div>
-  <div class="sidebar-item" onclick="loadLiked()">Liked Videos</div>
+  <div class="sidebar-item" onclick="loadLiked()">Liked</div>
 </div>
 
-<!-- Top Navbar -->
+<!-- ---------- NAVBAR ---------- -->
 <div class="navbar">
   <div class="search-box">
-    <input id="input" placeholder="Search videos...">
+    <input id="input" placeholder="Search videos..." />
     <button onclick="send()">Search</button>
   </div>
 </div>
 
-<!-- Command Bar -->
-<div style="margin-left:240px; padding:15px; background:#111; border-bottom:1px solid #222;">
-  <input id="commandInput"
-         placeholder='Type: "like this video", "unlike", "dislike"'
-         style="width:300px; padding:8px; background:#000; color:white; border:1px solid #333;">
-  <button onclick="runCommand()" 
-          style="padding:8px 15px; background:#2563EB; color:white; border:none; cursor:pointer;">
-    Run
-  </button>
+<!-- ---------- COMMAND BAR ---------- -->
+<div class="command-bar">
+  <input id="commandInput" placeholder='Type: "like this video", "unlike", "dislike"' />
+  <button onclick="runCommand()">Run</button>
 </div>
 
-<!-- Main -->
+<!-- ---------- MAIN CONTENT ---------- -->
 <div class="main">
   <div id="messages"></div>
 </div>
 
-<!-- Toast Container -->
-<div id="toast"></div>
+<div id="toast" class="toast"></div>
 
 <script>
 const API = "https://mcp-agent-1.onrender.com/api";
 
-// Toast System
-function showToast(message) {
-  let toast = document.getElementById("toast");
-  toast.innerHTML = message;
-  toast.classList.add("show");
-  setTimeout(() => toast.classList.remove("show"), 2500);
+/* ---------- Toast ---------- */
+function showToast(msg) {
+  const t = document.getElementById("toast");
+  t.innerText = msg;
+  t.classList.add("show");
+  setTimeout(() => t.classList.remove("show"), 2500);
 }
 
-function addMessage(text) {
-  const messages = document.getElementById("messages");
-  const p = document.createElement("p");
-  p.innerHTML = text;
-  p.style.color = "#aaa";
-  messages.appendChild(p);
-}
-
-function clearMessages() {
-  document.getElementById("messages").innerHTML = "";
-}
-
-document.getElementById('input').addEventListener('keypress', function (e) {
-  if (e.key === 'Enter') send();
+/* ---------- Search ---------- */
+document.getElementById("input").addEventListener("keypress", e => {
+  if (e.key === "Enter") send();
 });
 
-// Search
 async function send() {
-  const input = document.getElementById("input");
   const query = input.value.trim();
   if (!query) return;
   input.value = "";
-
-  addMessage("🔎 Searching for: " + query);
-
   const res = await fetch(`${API}/search?query=${encodeURIComponent(query)}`);
-  const data = await res.json();
-  showVideos(data);
+  showVideos(await res.json());
 }
 
-// Render Videos
+/* ---------- Render Videos ---------- */
 function showVideos(list) {
-  clearMessages();
+  messages.innerHTML = "";
 
   const grid = document.createElement("div");
   grid.className = "video-grid";
@@ -251,36 +264,31 @@ function showVideos(list) {
     const card = document.createElement("div");
     card.className = "video-card";
 
-    card.onclick = () => {
-      window.open(`https://www.youtube.com/watch?v=${v.videoId}`, "_blank");
-    };
-
     card.innerHTML = `
       <img class="thumb" src="https://i.ytimg.com/vi/${v.videoId}/hqdefault.jpg">
       <div class="video-info">
         <h3>${v.title}</h3>
         <small>${v.channelTitle}</small>
       </div>
-
       <div class="button-row">
-        <button class="like-btn" onclick="event.stopPropagation(); likeVideo('${v.videoId}')">👍 Like</button>
-        <button onclick="event.stopPropagation(); commentVideo('${v.videoId}')">💬 Comment</button>
-        <button onclick="event.stopPropagation(); subscribeChannel('${v.videoId}')">🔔 Subscribe</button>
+        <button class="like-btn" onclick="likeVideo('${v.videoId}')">👍 Like</button>
+        <button onclick="commentVideo('${v.videoId}')">💬 Comment</button>
+        <button onclick="subscribeChannel('${v.videoId}')">🔔 Subscribe</button>
       </div>
     `;
 
     grid.appendChild(card);
   });
 
-  document.getElementById("messages").appendChild(grid);
+  messages.appendChild(grid);
 }
 
-// Actions
+/* ---------- Actions ---------- */
 async function likeVideo(videoId) {
   const res = await fetch(`${API}/like`, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ videoId })
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({videoId})
   });
   const data = await res.json();
   showToast(data.message || data.error);
@@ -292,29 +300,29 @@ async function commentVideo(videoId) {
 
   const res = await fetch(`${API}/comment`, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ videoId, text })
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({videoId, text})
   });
-  const data = await res.json();
-  showToast(data.message || data.error);
+
+  showToast((await res.json()).message);
 }
 
 async function subscribeChannel(videoId) {
   const res = await fetch(`${API}/subscribe`, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ videoId })
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({videoId})
   });
-  const data = await res.json();
-  showToast(data.message || data.error);
+
+  showToast((await res.json()).message);
 }
 
-// Sidebar
-function loadHome() { clearMessages(); addMessage("Enter search query above."); }
-function loadTrending() { showToast("Trending not implemented."); }
-function loadSubscriptions() { showToast("Subscriptions not implemented."); }
-function loadHistory() { showToast("History cannot be accessed via API."); }
-function loadWatchLater() { showToast("Watch Later cannot be accessed via API."); }
+/* ---------- Sidebar ---------- */
+function loadHome() { messages.innerHTML = "Search for something above."; }
+function loadTrending() { showToast("Feature not implemented"); }
+function loadSubscriptions() { showToast("Feature not implemented"); }
+function loadHistory() { showToast("History API not available"); }
+function loadWatchLater() { showToast("Watch Later API not available"); }
 
 function loadLiked() {
   fetch(`${API}/liked`)
@@ -322,12 +330,9 @@ function loadLiked() {
     .then(data => showVideos(data));
 }
 
-// ------------------------------
-// COMMAND SYSTEM
-// ------------------------------
+/* ---------- Command System ---------- */
 function runCommand() {
-  const cmd = document.getElementById("commandInput").value.toLowerCase().trim();
-
+  const cmd = document.getElementById("commandInput").value.toLowerCase();
   const likeBtn = document.querySelector(".like-btn");
 
   if (cmd.includes("like")) {
@@ -336,13 +341,13 @@ function runCommand() {
     return;
   }
 
-  if (cmd.includes("unlike") || cmd.includes("remove")) {
-    showToast("Unlike (UI only, backend not implemented)");
+  if (cmd.includes("unlike")) {
+    showToast("Unlike (UI only)");
     return;
   }
 
   if (cmd.includes("dislike")) {
-    showToast("Dislike (UI only, backend not implemented)");
+    showToast("Dislike (UI only)");
     return;
   }
 
